Creación del caso de uso de obtener citass